[metadata]
name = BaSiCPy
version = file: VERSION
description = A python package for background and shading correction of optical microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peng-lab/BaSiCPy
author = Nicholas Schaub, Tim Morello, Tingying Peng, Yohsuke T. Fukai
author_email = nick.schaub@nih.gov, timothy.morello@downstate.edu, tingying.peng@helmholtz-muenchen.de, ysk@yfukai.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = background shading flatfield darkfield biology optical microscopy image illumination
project_urls =
    Bug Tracker = https://github.com/peng-lab/BaSiCPy/issues

[options]
packages = find:
install_requires =
    click>=8.1.3
    jax>=0.3.10,<=0.3.23
    jaxlib>=0.3.10,<=0.3.23 # to import jaxlib.xla_extension.XlaRuntimeError
    numpy
    pooch
    pydantic>=1.9.1
    scikit-image
    scipy
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    basicpy = basicpy.__main__:main

[options.extras_require]
bench =
    jax
    jaxlib>=0.3.10 # to import jaxlib.xla_extension.XlaRuntimeError
    scipy
dask =
    dask
dev =
    black
    bump2version
    darglint
    dask
    flake8
    flake8-alphabetize
    flake8-black
    flake8-docstrings
    flake8-isort
    flake8-markdown
    flake8-pytest
    isort
    jax
    jaxlib>=0.3.10 # to import jaxlib.xla_extension.XlaRuntimeError
    mypy
    nox
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    pytest-datadir
    scipy
    xdoctest

[isort]
profile = black
