[metadata]
name = BaSiCPy
version = file: VERSION
description = A python package for background and shading correction of optical microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peng-lab/BaSiCPy
author = Nicholas Schaub, Tim Morello, Tingying Peng, Yohsuke T. Fukai
author_email = nick.schaub@nih.gov, timothy.morello@downstate.edu, tingying.peng@helmholtz-muenchen.de, ysk@yfukai.net
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = background shading flatfield darkfield biology optical microscopy image illumination
project_urls =
    Bug Tracker = https://github.com/peng-lab/BaSiCPy/issues

[options]
packages = find:
install_requires =
    hyperactive>=4.4.0
    jax>=0.3.10 #,<=0.3.23
    jaxlib>=0.3.10 #,<=0.3.23 # to import jaxlib.xla_extension.XlaRuntimeError
    numpy
    pooch
    pydantic>=2.0.2,<3.0.0
    scikit-image
    scipy
python_requires = >=3.8
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    basicpy = basicpy.__main__:main

[options.extras_require]
bench =
    jax
    jaxlib>=0.3.10 # to import jaxlib.xla_extension.XlaRuntimeError
    scipy
dask =
    dask
dev =
    black
    bump2version
    darglint
    dask
    flake8
    flake8-alphabetize
    flake8-black
    flake8-docstrings
    flake8-isort
    flake8-markdown
    flake8-pytest
    isort
    jax
    jaxlib>=0.3.10 # to import jaxlib.xla_extension.XlaRuntimeError
    mypy
    nox
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    pytest-datadir
    scipy
    xdoctest

[isort]
profile = black
