[metadata]
name = BaSiCPy
version = file: VERSION
description = A python package for background and shading correction of optical microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peng-lab/BaSiCPy
author = Yu Liu, Nicholas Schaub, Tim Morello, Tingying Peng, Yohsuke T. Fukai
author_email = liuyu9671@gmail.com, nick.schaub@nih.gov, timothy.morello@downstate.edu, tingying.peng@helmholtz-muenchen.de, ysk@yfukai.net
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = background shading flatfield darkfield biology optical microscopy image illumination
project_urls =
    Bug Tracker = https://github.com/peng-lab/BaSiCPy/issues

[options]
packages = find:
install_requires =
    dask
    hyperactive>=5.0.3
    numpy>=2.0.0
    pooch>=1.9.0
    pydantic>=2.12.0,<3.0.0
    scikit-image>=0.26.0
    scipy>=1.13.0
    torch
    torch-dct
    tqdm
python_requires = >=3.11
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    basicpy = basicpy.__main__:cli

[options.extras_require]
dev =
    black
    bump2version
    darglint
    flake8
    flake8-alphabetize
    flake8-black
    flake8-docstrings
    flake8-isort
    flake8-markdown
    flake8-pytest
    isort
    mypy
    nox
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    pytest-datadir
    xdoctest

[isort]
profile = black
